--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "validator": "^5.6.0"
   },
   "devDependencies": {
-    "expect": "^1.20.2",
-    "mocha": "^3.0.2",
-    "nodemon": "^1.10.2",
-    "supertest": "^2.0.0"
+    "expect": "^1.20.2"
   }
 }
